--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.8.1",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0",
     "react-feather": "^2.0.10",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
-    "axios": "^1.6.7"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.0.0",
@@ -29,7 +26,9 @@
     "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
+    "postcss": "^8",
     "prettier": "^3.0.3",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "tailwindcss": "^3.3.0"
   }
 }
